--- a/css/food.css
+++ b/css/food.css
@@ -16,7 +16,6 @@ body {
 .title {
   display: flex;
   align-items: center;
-
 }
 
 .icon {
@@ -44,21 +43,27 @@ body {
   margin: 20px 70px;
 }
 
-.old_food_01 {
+#output {
+  padding: 0px;
+}
+
+.food {
   width: 320px;
+  color: black;
+  font-size: 12px;
+  list-style: none;
+  text-decoration: none;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  margin-top: 16px;
 }
 
-.old_food_01_image {
-  width: 120px;
-  height: 120px;
-  margin: 20px;
+.food:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  cursor: hand;
 }
 
-.old_food_01_text {
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
+.food_text {
+  width: 240px;
+  margin-left: 30px;
 }
