--- a/css/menu.css
+++ b/css/menu.css
@@ -3,6 +3,34 @@ body {
   background-color: #ffffffee;
 }
 
+.menu_main {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.menu_main h1 {
+  font-size: 20px;
+  color: #555;
+  margin-left: 10px;
+}
+
 .menu {
   position: absolute;
   z-index: 1;
@@ -13,6 +41,7 @@ body {
   -ms-transform: translateX(-50%);
   display: flex;
   flex-direction: column;
+  top: 80px;
 }
 
 .recipe img {
